# file-sharing-c

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
DB/: create.sql
download/: CMakeLists.txt
src/: client  client.c  client.h  db_utils.c  db_utils.h  server  server.c  test.c
src/controllers/: file_controller.c  folder_controller.h  group_controller.h
src/db/: db_access.c  db_access.h
src/models/: folder_model.c  group_model.c  join_model.c  user_model.c
src/server/: client_handler.h  db_utils.c  db_utils.h  file_handler.c  file_handler.h  folder_handler.c  folder_handler.h  group_handler.c  group_handler.h  server.c
src/server/controllers/: file_controller.c  file_controller.h  folder_controller.c  folder_controller.h  group_controller.c  user_controller.c  user_controller.h
src/server/db/: db_access.c  db_access.h
src/server/handler/: file_handler.c  file_handler.h  folder_handler.c  folder_handler.h  user_handler.c  user_handler.h
src/server/models/: folder_model.h  group_model.h  join_model.h  user_model.h
src/server/system/: system_access.c  system_access.h
src/utils/: client_handler.h  client_utils.c  client_utils.h  config.c  config.h  helper.c  helper.h  structs.c  structs.h
